Add blocks to save/read CPU intensive objects

--- a/notebooks/02-data-preprocessing.ipynb
+++ b/notebooks/02-data-preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,8 @@
     "from nltk import pos_tag, FreqDist\n",
     "\n",
     "from wordcloud import WordCloud\n",
+    "\n",
+    "import pickle\n",
     "\n",
     "pd.options.display.float_format = '{:.3f}'.format\n",
     "pd.options.display.max_columns = 50\n",
@@ -118,6 +120,19 @@
    "source": [
     "# remove single row with NaN in `comment_text` (probably there just for fun!)\n",
     "new_target_df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # save new df to reuse it later without re-creating it\n",
+    "# new_target_df.to_csv('../data/new_target_df.csv', index=False)\n",
+    "\n",
+    "# # load new df so you don't need to re-create it\n",
+    "# new_target_df = pd.read_csv('../data/new_target_df.csv')"
    ]
   },
   {
@@ -486,6 +501,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ### Load corpus lists in from pickle (to avoid re-running)\n",
+    "# filename = \"../data/corpus_dict.pkl\"\n",
+    "\n",
+    "# open_file = open(filename, \"rb\")\n",
+    "# corpus_dict = pickle.load(open_file)\n",
+    "# open_file.close()\n",
+    "\n",
+    "# bully_corpus_list = corpus_dict['bully_corpus_list']\n",
+    "# nonbully_corpus_list = corpus_dict['nonbully_corpus_list']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [
@@ -725,6 +757,23 @@
     "fig, ax = plt.subplots(figsize=(10,10))\n",
     "nonbully_plot = sns.barplot(x=nonbully_freq.values, y=nonbully_freq.index, ax=ax, palette=\"mako\")\n",
     "plt.savefig('../images/nonbully_FreqDist.jpg', transparent = False, bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ### Save corpus lists to pickle file (nested in dictionary)\n",
+    "# corpus_dict = {\n",
+    "#     'bully_corpus_list': bully_corpus_list,\n",
+    "#     'nonbully_corpus_list': nonbully_corpus_list\n",
+    "# }\n",
+    "# filename = \"../data/corpus_dict.pkl\"\n",
+    "# open_file = open(filename, \"wb\")\n",
+    "# pickle.dump(corpus_dict, open_file)\n",
+    "# open_file.close()"
    ]
   },
   {
