Minor preprocessing changes

--- a/notebooks/02-data-preprocessing.ipynb
+++ b/notebooks/02-data-preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,19 +124,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # save new df to reuse it later without re-creating it\n",
-    "# new_target_df.to_csv('../data/new_target_df.csv', index=False)\n",
-    "\n",
-    "# # load new df so you don't need to re-create it\n",
-    "# new_target_df = pd.read_csv('../data/new_target_df.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -151,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +147,7 @@
        "338409"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +171,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,6 +189,19 @@
     "\n",
     "train_df = pd.concat([majority_df, minority_df])\n",
     "train_df['target'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # save training df to reuse it later without re-creating it\n",
+    "# train_df.to_csv('../data/train_df.csv', index=False)\n",
+    "\n",
+    "# # load train df so you don't need to re-create it\n",
+    "# train_df = pd.read_csv('../data/train_df.csv')"
    ]
   },
   {
