Add notebook with data preprocessing

--- a/01-data-understanding.ipynb
+++ b/01-data-understanding.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detecting Cyberbullying with NLP"
+    "# Detecting Cyberbullying with NLP\n",
+    "\n",
+    "**Author: Greg Burgess**"
    ]
   },
   {
@@ -968,7 +970,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -998,6 +1002,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There is a single row for which the `comment_text` is empty. Let's drop it before continuing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove single row with NaN in `comment_text` (probably there just for fun!)\n",
+    "new_target_df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Using the combined criteria, roughly 17% of the posts are considered positive targets, whereas the criterion for the `toxicity` category alone yields roughly 8% of the posts. \n",
     "\n",
     "Although the proportion of positive target posts is small, the total number of toxic posts is approaching 340,000. "
@@ -1005,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1044,11 +1065,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "del jigsaw_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have created this new target dataframe, let's write it out to file to use in subsequent notebooks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write new target data frame out to file\n",
+    "new_target_df.to_csv('data/new_target_df.csv', index=False)"
    ]
   }
  ],
