Update markdown content and links across multiple notebooks

--- a/01-data-understanding.ipynb
+++ b/01-data-understanding.ipynb
@@ -1088,6 +1088,13 @@
     "# Write new target data frame out to file\n",
     "new_target_df.to_csv('data/new_target_df.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, we're ready to proceed to [data preprocessing](./02-data-preprocessing.ipynb)"
+   ]
   }
  ],
  "metadata": {
