--- a/02-data-preprocessing.ipynb
+++ b/02-data-preprocessing.ipynb
@@ -706,7 +706,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -730,6 +732,13 @@
     "plt.figure()\n",
     "plt.imshow(nonbully_wordcloud, interpolation=\"bilinear\")\n",
     "plt.axis(\"off\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After exploring these preprocessing techniques, we can move to the [pipelines and models](./03-pipelines-and-models.ipynb) notebook."
    ]
   }
  ],
