--- a/03-pipelines-and-models.ipynb
+++ b/03-pipelines-and-models.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Detecting Cyberbullying with NLP](images/Cyberprzemoc.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Detecting Cyberbullying with NLP\n",
+    "\n",
+    "**Author: Greg Burgess**\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -55,7 +72,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now that I have completed [data preprocessing](./02-data-preprocessing.ipynb), I replicate that here before moving on to modeling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Set up functions for preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ‘comment_text’ field requires standard \"Bag of Words\" preprocessing techniques for NLP:\n",
+    "\n",
+    "- text cleaning\n",
+    "- remove stop words\n",
+    "- tokenization\n",
+    "- lemmatization\n",
+    "- vectorization\n",
+    "\n",
+    "The functions below are set up to perform that preprocessing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The lemmatizer requires part of speech for each word, in order to determine the correct lemma for each word. The nltk `pos_tag` method gives us part of speech, but it isn't in the format expected by the lemmatizer. The `get_wordnet_pos` function converts to the expected part of speech."
    ]
   },
   {
@@ -78,6 +124,17 @@
     "        return wordnet.ADV\n",
     "    else:\n",
     "        return wordnet.NOUN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `word_processor` function does the following:\n",
+    "- Uses RegexpTokenizer to find individual words in the `comment_text` string. The regex pattern will match one or more contiguous letters, and will include a subsequent apostrophe that is followed by more letters. Consequently, the output of the regex will remove punctuation.\n",
+    "- Converts characters to lowercase and removes stopwords in the supplied stopwords list\n",
+    "- Looks up the part of speech for a word, and inputs the word and part of speech into the lemmatizer.\n",
+    "- Joins the list of lemmas output by the lemmatizer back into a single string that can be used by a vectorizer"
    ]
   },
   {
@@ -113,6 +170,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in the file containing the resampled comments, which removed the class imbalance by undersampling the majority (non-toxic) class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -121,6 +185,17 @@
    "outputs": [],
    "source": [
     "train_df = pd.read_csv('data/train_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the preprocessing function `word_processor`, which processes the text and returns each comment as a cleaned and lemmatized string.\n",
+    "\n",
+    "It does not cause data leakage to do these stages of cleaning and preprocessing prior to the train-test split. This is because each row is processed independently of the content of the other rows.\n",
+    "\n",
+    "However, the vectorization should be done after the train-test split, because vectorization often depends on the content of other rows in the sample."
    ]
   },
   {
@@ -261,6 +336,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train-test split isolates the test set from the training procedures, so that we can validate the performance of our model on unseen data.\n",
+    "\n",
+    "After using `train_test_split`, the training set contains just over 500,000 comments, and the left-out, unseen test set contains just under 170,000 comments.\n",
+    "\n",
+    "Also, the train-test split is done here prior to vectorization. This prevents data leakage from occuring during vectorization, when using document frequency in the vectorization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -309,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Need to set up pipeline to perform preprocessing steps to each split of the data"
+    "I set up the final preprocessing steps (vectorization) as a pipeline, so that I can use that pipeline during cross-validation. Including this step in a pipeline during cross-validation means that vectorization is done separately for each training set without causing leakage into the validation set."
    ]
   },
   {
@@ -331,6 +417,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this classification problem, there are costs for both false positives and false negatives. \n",
+    "- False negatives (i.e., labeling toxic posts as non-toxic) are cases of cyberbullying that were missed, and negative effects of that cyberbullying will be unaddressed\n",
+    "- False positives (i.e., labeling non-toxic posts as toxic) can reduce trust in the predictive model, and result in parents choosing to ignore potential warnings\n",
+    "\n",
+    "To balance sensitivity to both types of errors, during both training and evaluation, I used the **F1-score** as the metric for model performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -338,6 +435,13 @@
    "source": [
     "# Specify scoring method that will be used to evaluate all models\n",
     "scoring=\"f1\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For DummyClassifier, I used `strategy='uniform'`. Because I undersampled the non-toxic class and made the training set contain exactly the same number of comments in both classes, using `strategy='most_frequent'` resulted in dummy predictions for each fold."
    ]
   },
   {
@@ -365,6 +469,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I added the StandardScaler step to the logistic regression pipeline, because regression algorithms are sensitive to variables with different scales. Without applying the StandardScaler, high frequency words would have inordinate influence over the logistic regression.\n",
+    "\n",
+    "The `with_mean=False` option was necessary, because the CountVectorizer yields a sparse matrix, and StandardScaler cannot mean center a sparse matrix. The output would no longer be sparse, because all zeros would be replaced by the (negative) mean."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -378,6 +491,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This class was used in several Flatiron school lectures. I am using it to run k-folds cross-validation, print and plot the scoring of the cross-validation. I added one method (`plot_cv_confusion_matrix`) to also plot a confusion matrix from the predictions of all of the validation sets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -385,6 +505,7 @@
    "source": [
     "### Using this class (From Flatiron School Lecture 51) to conduct \n",
     "### cross-validation, store, and display results\n",
+    "### I added the plot_cv_confusion_matrix method\n",
     "\n",
     "class ModelWithCV():\n",
     "    '''Structure to save the model and more easily see its crossvalidation'''\n",
@@ -488,6 +609,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Created a DummyClassifier model to show the worst-case scenario of classification model performance. Every model that I run should be better than this."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -495,6 +623,13 @@
    "source": [
     "dummy_cv = ModelWithCV(dummy_model_pipe, model_name='dummy_model_pipe', \n",
     "                       X=X_train, y=y_train, scoring=scoring)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, random predictions result in an average F1 score of 50%."
    ]
   },
   {
@@ -572,18 +707,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Run Multinomial Naive Bayes Classifier"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Naive bayes classifiers are popular for NLP models, because they are very lightweight and quick when used with large, sparse predictor matrices such as those produce with a \"Bag of Words\" vectorization.\n",
+    "\n",
+    "I will start with a multinomial naive bayes classifier as a first simple model, and then determine whether other types of models might produce superior results."
+   ]
   },
   {
    "cell_type": "code",
